--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -14,13 +14,13 @@
     </div>
 
     <div class="login-logo-macom">
-        <img src="images/macom.png"
+        <img src="images/MACOM.png"
             alt="MACOM"
             class="login-logo-img" />
     </div>
     <RadzenCard Class="login-card">
         <div class="login-header">
-            <h1>Neurofragancias</h1>
+            <h1>NEUROFRAGANCIAS</h1>
             <p>Plataforma de neuromarketing</p>
         </div>
 
