--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -11,10 +11,10 @@
 
     <!-- CSS de tu app -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/app.css" />
-
     <!-- CSS de Radzen -->
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css" />
+    <link rel="stylesheet" href="css/app.css" />
+    
 </head>
 <body>
     <app>
@@ -27,6 +27,12 @@
     <!-- JS de Radzen -->
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
     <script src="js/downloadHelper.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/nf-charts.js"></script>
+
 
 </body>
 </html>
