--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -8,13 +8,13 @@
 
 <div class="login-page">
     <div class="login-logo-upv">
-        <img src="images/upv.png"
+        <img src="/images/upv.png"
             alt="UPV"
             class="login-logo-img" />
     </div>
 
     <div class="login-logo-macom">
-        <img src="images/MACOM.png"
+        <img src="/images/MACOM.png"
             alt="MACOM"
             class="login-logo-img" />
     </div>
