--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -14,7 +14,7 @@
     </div>
 
     <div class="login-logo-macom">
-        <img src="/images/MACOM.png"
+        <img src="/images/macom.png"
             alt="MACOM"
             class="login-logo-img" />
     </div>
