--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -21,7 +21,7 @@
     <RadzenCard Class="login-card">
         <div class="login-header">
             <h1>NEUROFRAGANCIAS</h1>
-            <p>Plataforma de neuromarketing</p>
+            <p>Plataforma de neuromarketing olfativo</p>
         </div>
 
         <div class="login-form">
